[package]
name = "popow"
version = "0.1.0"
authors = ["kushti <kushti@protonmail.ch>"]

[dependencies]
rust-crypto = "0.2.36"
rustc-serialize = "0.3"
heapsize = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
bitcrypto = { path = "../crypto" }
primitives = { path = "../primitives" }
serialization = { path = "../serialization" }
serialization_derive = { path = "../serialization_derive" }
network = { path = "../network" }
chain = {path = "../chain" }
test-data = {path = "../test-data" }
